--- a/smart-calendar/src/app/shared/components/sidebar/sidebar.html
+++ b/smart-calendar/src/app/shared/components/sidebar/sidebar.html
@@ -2,7 +2,7 @@
   <!-- Header -->
   <div class="sidebar-header">
     <a routerLink="/" class="brand">
-      <img [src]="logoUrl" alt="SmartCalendar" *ngIf="logoUrl">
+      <img src="../../assets/images/logo.png" alt="Logo Smart Calendar" />
       <span class="brand-text">SmartCalendar</span>
     </a>
     <button class="toggle-btn"
